cambio de footer

--- a/contacto.html
+++ b/contacto.html
@@ -136,18 +136,29 @@
             </span>
         </div>
     </div>
-<div class="footer-abajo">
- <!--   <div class="footer-menu">
+    <div class="footer-abajo">
+        <!--   <div class="footer-menu">
         <div>INICIO</div>
         <div>HORARIO</div>
         <div>ENTRADAS</div>
         <div>PLANTILLAS</div>
         <div>TIENDA</div>
     </div>-->
-    <div class="footer-logo">
-        <img src="img/Logo black.png" alt="">
+        <div class="footer-logo">
+            <img src="img/Logo black.png" alt="">
+            <div class="footer-texto">
+                <h3>INFORMACION DE CONTACTOS</h3>
+                <p>Club: BSK BASAURI SASKIBALOI KLUBA</p>
+                <p>Email: bsk.basauri@bizkaiabasket.com</p>
+                <p>Teléfono: 695788997</p>
+            </div>
+            <div>
+                <p><abbr
+                        data-title="Las imágenes utilizadas en este sitio web han sido tomadas de otras fuentes y se utilizan exclusivamente con fines educativos no comerciales. Todos los derechos de autor pertenecen a sus legítimos propietarios.">Uso
+                        de las imagenes</abbr></p>
+            </div>
+        </div>
     </div>
-</div>
 
 </footer>
 </body>
