cambio de nombre

--- a/contacto.html
+++ b/contacto.html
@@ -104,7 +104,7 @@
 
             <h2> INFORMACION DE CONTACTOS</h2>
 
-             <p> Club: BSK BASAURI SASKIBALOI KLUBA</p>
+             <p> Club: BASAURI BULLS</p>
              <p>Dirección: https://maps.app.goo.gl/TXfmvERDzKvzwiTd9</p>
              <p>Provincia: Vizcaya</p>
              <p>Email: bsk.basauri@bizkaiabasket.com</p>
