--- a/contacto.html
+++ b/contacto.html
@@ -91,8 +91,7 @@
 
     <div class="mapa">
 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3079.75012267955!2d-2.885253997769142!3d43.23261891513291!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4e4e91afb21f8f%3A0xbe4c97b025275975!2sPolideportivo%20Artunduaga%20-%20Basauri%20Kirolak!5e0!3m2!1ses!2ses!4v1702887208196!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23255.43246989206!2d-2.9040631693078423!3d43.231947001982675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4e4ef25ecabe6d%3A0xffa0d5f535937935!2s48970%20Basauri%2C%20Vizcaya!5e0!3m2!1ses!2ses!4v1703250678284!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
 </section>
@@ -105,11 +104,11 @@
             <h2> INFORMACION DE CONTACTOS</h2>
 
              <p> Club: BASAURI BULLS</p>
-             <p>Dirección: https://maps.app.goo.gl/TXfmvERDzKvzwiTd9</p>
+             <p>Dirección: https://maps.app.goo.gl/8LFgWFUbvvw24g9H9</p>
              <p>Provincia: Vizcaya</p>
-             <p>Email: bsk.basauri@bizkaiabasket.com</p>
+             <p>Email: basauri.bulls@gmail.com</p>
              <p>Población: Basauri</p>
-             <p>Teléfono: 695788997</p>
+             <p>Teléfono:636487649477</p>
         </div>
 
 
