--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <h1>Bienvenidos a Basauri Saski Club</h1>
                 </div>
                 <div>
-                    <p>No solo practicamos un, sino que construimos una comunidad apasionada y dedicada. Explora
+                    <p>No solo practicamos un deporte, sino que construimos una comunidad apasionada y dedicada. Explora
                         nuestras secciones para conocer más sobre nuestra historia, nuestro equipo, los eventos
                         emocionantes que organizamos y las últimas noticias del mundo del baloncesto.
 
