--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="general.css">
     <link rel="stylesheet" href="inicio.css">
@@ -290,7 +290,7 @@
 
 
     <footer>
-        <div class="marquee-infinite">
+       <!--  <div class="marquee-infinite">
             <div>
                 <span>
                     <img src="img/logo 1.png" alt="">
@@ -307,7 +307,7 @@
                     <img src="img/logo 5.png" alt="">
                 </span>
             </div>
-        </div>
+        </div> -->
         <div class="footer-abajo">
             <!--   <div class="footer-menu">
             <div>INICIO</div>
