--- a/plantillas.html
+++ b/plantillas.html
@@ -263,13 +263,13 @@
             </div>
         </div>
         <div class="footer-abajo">
-            <!--   <div class="footer-menu">
-            <div>INICIO</div>
-            <div>HORARIO</div>
-            <div>ENTRADAS</div>
-            <div>PLANTILLAS</div>
-            <div>TIENDA</div>
-        </div>-->
+          <!--   <div class="footer-menu">
+               <div>INICIO</div>
+               <div>HORARIO</div>
+               <div>ENTRADAS</div>
+               <div>PLANTILLAS</div>
+               <div>TIENDA</div>
+            </div> -->
             <div class="footer-logo">
                 <img src="img/Logo black.png" alt="">
                 <div class="footer-texto">
@@ -278,12 +278,14 @@
                     <p>Email: bsk.basauri@bizkaiabasket.com</p>
                     <p>Teléfono: 695788997</p>
                 </div>
-                <div>
+            <div class="aviso">
                     <p><abbr
-                            data-title="Las imágenes utilizadas en este sitio web han sido tomadas de otras fuentes y se utilizan exclusivamente con fines educativos no comerciales. Todos los derechos de autor pertenecen a sus legítimos propietarios.">Uso
+                            data-title="Las imágenes utilizadas en este sitio web han sido tomadas de otras fuentes y
+                              se utilizan exclusivamente con fines educativos no comerciales.
+                               Todos los derechos de autor pertenecen a sus legítimos propietarios.">Uso
                             de las imagenes</abbr></p>
-                </div>
             </div>
+             
         </div>
 
     </footer>
