--- a/plantillas.html
+++ b/plantillas.html
@@ -244,7 +244,7 @@
 
 
     <footer>
-        <div class="marquee-infinite">
+   <!--      <div class="marquee-infinite">
             <div>
                 <span>
                     <img src="img/logo 1.png" alt="">
@@ -261,7 +261,7 @@
                     <img src="img/logo 5.png" alt="">
                 </span>
             </div>
-        </div>
+        </div> -->
         <div class="footer-abajo">
           <!--   <div class="footer-menu">
                <div>INICIO</div>
