--- a/calendario.html
+++ b/calendario.html
@@ -129,7 +129,7 @@
 		</div>
 	<!-- </main> -->
 	<footer>
-       <!--  <div class="marquee-infinite">
+        <div class="marquee-infinite">
             <div>
                 <span>
                     <img src="img/logo 1.png" alt="">
@@ -146,16 +146,16 @@
                     <img src="img/logo 5.png" alt="">
                 </span>
             </div>
-        </div> -->
-        <!-- <div class="footer-abajo"> -->
-            <!--   <div class="footer-menu">
+        </div> 
+        <!--  <div class="footer-abajo"> 
+               <div class="footer-menu">
             <div>INICIO</div>
             <div>HORARIO</div>
             <div>ENTRADAS</div>
             <div>PLANTILLAS</div>
             <div>TIENDA</div>
-        </div>-->
-         <!--    <div class="footer-logo"> -->
+        </div> -->
+             <div class="footer-logo">
                 <img src="img/Logo black.png" alt="">
                 <div class="footer-texto">
                     <h3>INFORMACION DE CONTACTOS</h3>
